# py_chroma

./: .gitignore  CMakeLists.txt  README.md
py_chroma/: __init__.py  _core.py  hmc.py  params.py  runtime.py  smd.py  xml.py
scripts/: pychroma_env.sh
src/: pychroma_api.h  pychroma_core.cpp  pychroma_hmc.cpp  pychroma_inline.cpp  pychroma_rect_wloops.cpp  pychroma_smd.cpp  pychroma_state.cpp  pychroma_state.h  pychroma_util.cpp  pychroma_util.h
tests/: smoke_plaquette.py
tests/chroma/glue/plaq_density/: XMLDAT  chroma.out.xml  fred_py.xml  run_compare.sh  run_pychroma.py
tests/chroma/glue/rect_wloops/: gauge_transform_test.py  rect_wloops.ini.xml  rect_wloops_after.h5  rect_wloops_before.h5  rect_wloops_py.h5  run_pychroma.py  run_pychroma.sh  run_pychroma_direct.py  run_pychroma_direct.sh  run_rgauge_test.sh
tests/chroma/schrfun/: c_schrfun-hadspec.out.xml  chroma.candidate.xml  compare_outputs.py  p_schrfun-hadspec.out.xml  p_schrfun-pcac.out.xml  pychroma.candidate.xml  run_chroma.sh  run_pychroma.py  run_pychroma.sh  schrfun-hadspec.candidate.xml  schrfun-pcac.candidate.xml
tests/hmc/: compare_hmc_outputs.py  compare_prec_wilson.sh  run_hmc_pychroma.py  run_prec_wilson.sh  run_seoprec_clover_multihasenbusch.sh  run_sf_clover_hmc.py  run_sf_clover_hmc_no_xml.py
tests/smd/: run_prec_wilson.sh  run_prec_wilson_no_xml.py  run_seoprec_clover_multihasenbusch.sh  run_smd_pychroma.py
